# omron_amr

./: README.md  requirements.txt
.github/workflows/: compile.yaml  compile.yml
amr_core/: CMakeLists.txt  package.xml  setup.py
amr_core/amr_core/: dock.py  unified_action_client.py
amr_core/include/amr_core/: client_node.hpp  core_node.hpp
amr_core/include/amr_core/interfaces/: arcl_interface.hpp  arcl_ros.hpp  drive_interface.hpp  driver.hpp  joint_publisher.hpp  laser_interface.hpp  laser_scans.hpp  map_file_interface.hpp  status_interface.hpp
amr_core/include/amr_core/socket/: socket_common.hpp  socket_driver.hpp  socket_listener.hpp  socket_taskmaster.hpp
amr_core/include/amr_core/support/: driver.hpp  goal_markers.hpp  laser_scans.hpp  map_loader.hpp
amr_core/include/amr_core/utils/: parser.hpp
amr_core/src/: client_node.cpp  core_node.cpp
amr_core_cpp/: CMakeLists.txt  package.xml  test_socket_taskmaster
amr_core_cpp/src/: action_server.cpp  arcl_api_service.cpp  client_node.cpp  core.cpp  core_node.cpp  ld_states_publisher.cpp  point_add_server.cpp  test_socket_driver.cpp  test_socket_listener.cpp  test_socket_taskmaster.cpp  unified_action_client.cpp
amr_core_cpp/test/: test_connect_socket.cpp  test_ld_states_publisher.cpp  test_socket_driver.cpp  test_socket_listener.cpp  test_socket_taskmaster.cpp
amr_description/: CMakeLists.txt
amr_description/xacro/: ld250.urdf.xacro  (+1 more)
amr_nav2/: CMakeLists.txt  package.xml
amr_ros/: package.xml
docs/: core_parameters.md  digital-twin.md  digital_twin.md  original_readme.md  parameters.md
(+33 files in other folders)
